# Claude-GTM-Python

./: .env.example  .gitignore  CLAUDE.md  main.py  primer.md  pyproject.toml
app/: config.py  errors.py  main.py  sse.py
app/routes/: agents.py  artifacts.py  campaigns.py  cron.py  health.py  health_monitor.py  icp.py  offers.py  skills.py  variants.py
clients/: openai_client.py  supabase_client.py
clients/apollo/: __init__.py  analytics.py  contacts.py  enrichment.py  errors.py  search.py  sequences.py  types.py  utils.py
context/api-guides/: apollo-api-guide.md  apollo-capabilities-guide.md  openai-api-guide.md  supabase-guide.md
context/copywriting/: email-principles.md  linkedin-principles.md
context/frameworks/: api-routing-guide.md  contact-finding-guide.md  icp-framework.md  positioning-canvas.md  signal-brainstorming-template.md  signal-generation-guide.md  signal-generation.md
context/learnings/: agent-memory.json  what-works.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
models/: api.py  campaign.py  company.py  contact.py  evidence.py  message.py  metrics.py  offer.py
offers/: baseline-report.json
services/: csv_export.py  deduplication.py  enrollment_ramp.py  geography.py  intelligence.py  logging.py  personalization.py  rate_limiter.py  retry.py  run_tracker.py  scoring.py
tests/: conftest.py  test_enrollment_ramp.py  test_guardrails.py  test_models.py  test_rate_limiter.py
workers/: agent_tasks.py  celery_app.py  scheduled_tasks.py  skill_tasks.py
(+221 files in other folders)
