[project]
name = "cirruslabs"
version = "0.1.0"
description = "Signal-driven outbound campaign automation — Python backend"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "supabase>=2.13.0",
    "openai>=1.60.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "sse-starlette>=2.2.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "asgiref>=3.8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "coverage>=7.6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
